Enemy Avoid Shot
●Create an enemy typethat can avoid theplayer’s weapon●When you fire a shot,the enemy shoulddetect a shot in rangeand try to avoid it.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\UIManager.cs" />
     <Compile Include="Assets\Explosion.cs" />
     <Compile Include="Assets\powerUp.cs" />
+    <Compile Include="Assets\AvoidArea.cs" />
     <Compile Include="Assets\Scripts\Lazer2.cs" />
     <Compile Include="Assets\CShake.cs" />
     <Compile Include="Assets\Scripts\Lazer3.cs" />
