--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\InputActions\2DGAMEDEV.cs" />
     <Compile Include="Assets\EnemyRayCast.cs" />
     <Compile Include="Assets\Scripts\Lazer.cs" />
+    <Compile Include="Assets\Scripts\Lazer4.cs" />
     <Compile Include="Assets\UIManager.cs" />
     <Compile Include="Assets\Explosion.cs" />
     <Compile Include="Assets\powerUp.cs" />
@@ -74,7 +75,7 @@
     <Compile Include="Assets\Scripts\Lazer3.cs" />
     <Compile Include="Assets\Scripts\MainMenuScript.cs" />
     <Compile Include="Assets\Scripts\Lazer1.cs" />
-    <Compile Include="Assets\Scripts\Lazer4.cs" />
+    <Compile Include="Assets\Boss.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Ludiq\Ludiq.PeekCore\DotNetDocumentation\System.xml" />
